--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "chokidar": "^3.5.2",
     "deep-equal": "^1.1.0",
     "express": "^4.17.1",
     "react": "^17.0.2",
